--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,10 @@ body{
 	background-color: #159957;
   	background-image: linear-gradient(120deg, #155799, #159957); 
   	background-size: 100% auto;
+
+  	color: white;
+}
+
+#StartButton {
+	color: white;
 }
